// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> Should match snapshot With number 1`] = `
.c0 {
  display: inline-block;
  margin-left: 8px;
  margin-right: 8px;
}

.c1 {
  border-radius: 8px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  line-height: 24px;
  min-width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  padding-left: 2px;
  padding-right: 2px;
  background-color: #f2f2f2;
  color: #424242;
}

<div
  class="c0"
  value="10"
>
  <span
    class="c1"
    value="10"
  >
    10
  </span>
  
</div>
`;

exports[`<Badge /> Should match snapshot with children 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  border-radius: 8px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  line-height: 24px;
  min-width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  padding-left: 2px;
  padding-right: 2px;
  position: absolute;
  right: -10px;
  top: -10px;
  background-color: #f2f2f2;
  color: #424242;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #1250C4;
  color: #ffffff;
  border: 2px solid #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c2:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,47,123,0.2),0px 4px 5px 0px rgba(0,47,123,0.14),0px 1px 10px 0px rgba(0,47,123,0.12);
  background-color: #002F7B;
  border-color: #002F7B;
}

.c2:focus,
.c2:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(18,80,196,0.2),0px 4px 5px 0px rgba(18,80,196,0.14),0px 1px 10px 0px rgba(18,80,196,0.12);
}

.c2:active {
  box-shadow: 0px 5px 5px -3px rgba(0,47,123,0.2),0px 8px 10px 1px rgba(0,47,123,0.14),0px 3px 14px 2px rgba(0,47,123,0.12);
  background-color: #002F7B;
}

<div
  class="c0"
  value="10"
>
  <span
    class="c1"
    value="10"
  >
    10
  </span>
  <button
    class="c2"
    type="button"
  >
    
  </button>
</div>
`;

exports[`<Badge /> Should match snapshot with skin 1`] = `
.c0 {
  display: inline-block;
  margin-left: 8px;
  margin-right: 8px;
}

.c1 {
  border-radius: 8px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  line-height: 24px;
  min-width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  padding-left: 2px;
  padding-right: 2px;
  background-color: #dcedc8;
  color: #004D40;
}

<div
  class="c0"
  value="10"
>
  <span
    class="c1"
    value="10"
  >
    10
  </span>
  
</div>
`;

exports[`<Badge /> Should match snapshot with skin inverted 1`] = `
.c0 {
  display: inline-block;
  margin-left: 8px;
  margin-right: 8px;
}

.c1 {
  border-radius: 8px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  line-height: 24px;
  min-width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  padding-left: 2px;
  padding-right: 2px;
  background-color: #424242;
  color: #f2f2f2;
}

<div
  class="c0"
  value="10"
>
  <span
    class="c1"
    value="10"
  >
    10
  </span>
  
</div>
`;
